# libre99

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE.md  NOTICE.md  README.md
.github/workflows/: ci.yml
assembler/: ASSEMBLER.md
crates/libre99-app/: Cargo.toml  build.rs
crates/libre99-app/src/: app.rs  assets.rs  audio.rs  cli.rs  config.rs  debug.rs  disks.rs  font.rs  help.rs  input.rs  logging.rs  main.rs  media.rs  pacing.rs  screenshot.rs  speed.rs  sysinfo.rs  text.rs  video.rs
crates/libre99-asm/: Cargo.toml
crates/libre99-asm/examples/: gpl_oracle.rs  rom_entry_census.rs
crates/libre99-asm/src/: disasm.rs  disk_dsr.rs  expr.rs  front.rs  isa.rs  lex.rs  lib.rs  main.rs  system_rom.rs
crates/libre99-asm/tests/: cartridge.rs  committed_bin.rs  entry_census.rs  gpl_core.rs  gpl_fmt.rs  gpl_fp.rs  gpl_fuzz.rs  gpl_opcode_sweep.rs  jaywalk.rs  jaywalker99.rs  rom.rs  sokoban.rs  titris.rs  xb_substrate.rs
crates/libre99-core/: Cargo.toml
crates/libre99-core/examples/: boot_frames.rs  f5_mask_bisect.rs  f5_press2_probe.rs  recon_probe.rs
crates/libre99-core/src/: bus.rs  cartridge.rs  cpu.rs  cru.rs  disk.rs  grom.rs  keyboard.rs  lib.rs  machine.rs  psg.rs  state.rs  sysinfo.rs  third_party.rs  vdp.rs
crates/libre99-core/tests/: beam.rs  boot.rs  cartridge.rs  cpu.rs  cru.rs  disk.rs  grom.rs  machine.rs  psg.rs  state.rs  trace.rs  vdp.rs
crates/libre99-gpl/: Cargo.toml
crates/libre99-gpl/examples/: blank_timeout_probe.rs  census_probe.rs  cru_experiment.rs  dsrlnk_baddev_probe.rs  f5_repro.rs  fctn_probe.rs  font_extract.rs  grom_census.rs  invaders_probe.rs  isr_regression_probe.rs  joy_column_trace.rs  joy_gameplay_probe.rs  joy_gromtrace.rs  joystick_scan_check.rs  keymap_probe.rs  m2_probe.rs  m4_probe.rs  menu_beep_probe.rs  menu_farlist_probe.rs  menu_probe.rs  menu_scan_trace.rs  move_c_probe.rs  move_probe.rs  powerup_probe.rs  puscan_trace.rs  readme_gallery.rs  reset_artifacts_probe.rs  reset_psg_probe.rs  rom_title_probe.rs  scan_check.rs  show_title.rs  sound_probe.rs  tipython_probe.rs  title_recon.rs  title_shot.rs  tod_disk_probe.rs  tod_load_probe.rs  xb_census.rs
crates/libre99-gpl/src/: asm.rs  census.rs  decode.rs  disasm.rs  encode.rs  font.rs  isa.rs  keymap.rs  lib.rs  logo.rs  main.rs  operand.rs  system_grom.rs
crates/libre99-gpl/tests/: boot_trivial.rs  census.rs  char_set.rs  committed_bin.rs  conformance.rs  coverage_sweep.rs  device_io.rs  disasm_recon.rs  disk_dsr.rs  f5_reset.rs  firmware_matrix.rs  interrupts.rs  keyboard.rs  menu.rs  menu_cap.rs  menu_cue.rs  perf_parity.rs  rom_kscan.rs  rom_perf.rs  rom_robust.rs  rom_title.rs  roundtrip.rs  service_stubs.rs  sweep.rs  sysinfo_screen.rs  ti_python.rs  title_screen.rs  xb_smoke.rs
crates/libre99-gpl/tests/dsr_common/: mod.rs
docs/: ARCHITECTURE.md  CROSS-VALIDATION.md  DEVELOPMENT.md  KNOWN-ISSUES.md  ROADMAP.md  STATUS.md  TI-PYTHON.md  USER-GUIDE.md
docs/history/: ASSEMBLER-POC-PLAN.md  PLAN.md  POSTMORTEMS.md  QUALITY-EVALUATION-2026-07-05.md  ROAD-TO-0.1.0.md
docs/ti99book/: .gitattributes  .gitignore  CLAUDE.md  ERRATA.md  Makefile  README.md  setup.sh  verify.sh
docs/ti99book/code/bench/: Cargo.toml
docs/ti99book/code/bench/src/: main.rs
docs/ti99book/code/ch03/: hello.a99
docs/ti99book/code/ch04/: trace.a99
docs/ti99book/code/ch05/: budget-template.md  det32k.a99  mmio.a99  padrun.a99  race.txt  rig.a99
docs/ti99book/code/ch07/: edges.a99  flagpr.a99  fldnote.a99  hibyte.a99  loops.a99  membnch.a99  memlib.a99  modecost.a99  record.a99  setup.a99
docs/ti99book/code/ch08/: carrybug.a99  fields.a99  mathlib.a99  mathtest.bench  mul10.a99  scraps.a99
docs/ti99book/code/ch09/: link.a99  probe.a99  reach.a99  stack99.a99  (+2 more)
docs/ti99book/manuscript/: 00-master-outline.md  _ledger.md  _stub-steering.md  _stubs.md  _style.md  _summaries.md  apA-tms9900-reference.md  apB-gpl-reference.md  apC-memory-maps-scratchpad.md  apD-tms9918a-reference.md  apE-sound-reference.md  apF-speech-reference.md  apG-cru-map.md  apH-dsr-pab-reference.md  apI-media-file-formats.md  apJ-charsets-keycodes.md  apK-console-entry-points.md  apL-toolchain-quick-reference.md  apM-glossary.md  apN-bibliography.md  ch01-genesis-and-fall.md  ch02-grand-tour.md  ch03-the-workshop.md  ch04-minicomputer-on-a-chip.md  ch05-console-memory-map.md  ch06-assembling-source-object-loaders.md  ch07-instruction-set-i-moving-data.md  ch08-instruction-set-ii-arithmetic-logic-bits.md  ch09-control-flow-and-program-shape.md  ch10-the-cru.md  ch11-craftsmanship.md  ch12-inside-the-tms9918a.md  ch13-graphics-i-and-a-text-engine.md  ch14-text-mode-and-multicolor.md  ch15-bitmap-mode.md  ch16-sprites.md  ch17-motion-game-loops-scrolling.md  ch18-advanced-and-modern-vdp.md  ch19-the-sound-generator.md  ch20-the-speech-synthesizer.md  (+25 more)
original-content/cartridges/jaywalk/: README.md  jaywalk.asm  jaywalk.ctg
original-content/cartridges/jaywalker99/: README.md  jaywalker99.asm  jaywalker99.ctg
original-content/cartridges/sokoban/: README.md  sokoban.asm  sokoban.ctg
original-content/cartridges/titris/: README.md  titris.asm  titris.ctg
original-content/system-roms/: DEBUGGING.md  GROM-DEBUGGING-GUIDE.md  LIMITATIONS.md  README.md  RECON.md  STATUS.md  XB-CENSUS.md
original-content/system-roms/disk-dsr/: DSR-ASSURANCE-PLAN.md  DSR-REWRITE-PLAN.md  PROGRESS.md  README.md  RECON.md  disk-dsr.asm
original-content/system-roms/grom/: COVERAGE-REPORT.md  README.md  SURFACE-MAP.md  console.gpl
original-content/system-roms/history/: DSR-REWRITE-PLAN.md  FINISHING-PLAYBOOK.md  GROM-REWRITE-PLAN.md  GROM-REWRITE-REVIEW.md  QUALITY-ASSESSMENT-PROGRESS.md  QUALITY-ASSESSMENT.md  README.md  ROM-ENTRY-CENSUS.md  ROM-PROGRESS.md  ROM-REWRITE-PLAN.md
original-content/system-roms/rom/: KSCAN-SPEC.md  README.md  RECON.md  SURFACE-MAP.md  console.asm
(+72 files in other folders)
